k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-db
  namespace: enterprise-ms
  labels:
    app.kubernetes.io/name: app-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: app-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-db
  namespace: enterprise-ms
spec:
  serviceName: app-db
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: app-db-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 20
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: app-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
